Issue #24 - add overflow: auto to .entry-content pre

--- a/oik-custom.css
+++ b/oik-custom.css
@@ -1,9 +1,6 @@
-/* (C) Copyright Bobbing Wide 2012-2016 */
+/* (C) Copyright Bobbing Wide 2012-2016,2019 */
 
-
-
-
-#adminmenu { transform: translateZ(0); } 
+#adminmenu { transform: translateZ(0); }
 div.bw_css code { display: block; }
 
 div.textwidget img.bw_follow { width: 24px; }
@@ -60,6 +57,7 @@ ul.bw_inline > li:before { content: " "; bottom: 0; padding: 0; }
 	border: 1px solid #ededed;
 	line-height: 1.2;
 	padding: 10px;
+    overflow: auto;
 }
 
 a.page-numbers.current,
